[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/SettingsDialog.tscn" id="2"]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="RootVBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="RootVBox"]
unique_name_in_owner = true

[node name="PlayButton" type="Button" parent="RootVBox/TopBar"]
text = "Play"

[node name="ResetButton" type="Button" parent="RootVBox/TopBar"]
text = "Reset"

[node name="SettingsButton" type="Button" parent="RootVBox/TopBar"]
text = "Settings"

[node name="AsciiMap" type="RichTextLabel" parent="RootVBox"]
unique_name_in_owner = true
scroll_active = true
autowrap_mode = 0
fit_content = false
size_flags_vertical = 3
text = ""

[node name="SettingsDialog" parent="." instance=ExtResource("2")]


